[project]
name = "medgemma-studio"
version = "0.5.0"
description = "Analyze medical text, 2D images, 3D CT volumes, and whole-slide pathology images with the Google MedGemma 1.5 model on Apple Silicon with MLX."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "mlx-vlm",
    "numpy>=2.4.4",
    "openslide-bin>=4.0.1.1",
    "openslide-python>=1.4.6",
    "pillow",
    "pydicom>=3.0.2",
    "python-dotenv",
    "streamlit>=1.56",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
