[project]
name = "medgemma-studio"
version = "0.7.3"
description = "Streamlit application for analyzing medical text and images using Google MedGemma on Apple Silicon with MLX."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "mlx-vlm>=0.6.3,<0.7",
    "numpy>=2.4.6",
    "openslide-bin>=4.0.1.2",
    "openslide-python>=1.4.6",
    "pillow",
    "pydicom>=3.0.2",
    "python-dotenv",
    "streamlit>=1.58",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
