[project]
name = "medgemma-studio"
version = "0.7.7"
description = "Streamlit application for analyzing medical text and images using Google MedGemma on Apple Silicon with MLX."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = "==3.12.*"
dependencies = [
    "mlx-vlm>=0.6.3,<0.7",
    "numpy>=2.4.6",
    "openslide-bin>=4.0.1.2",
    "openslide-python>=1.4.6",
    "pillow",
    "pydicom>=3.0.2",
    "python-dotenv",
    "streamlit>=1.58",
]

[project.urls]
Repository = "https://github.com/darylalim/medgemma-studio"
Issues = "https://github.com/darylalim/medgemma-studio/issues"
Changelog = "https://github.com/darylalim/medgemma-studio/releases"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "ty>=0.0.51",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
